--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       <p>&copy; 2025 My GitHub Website</p>
     </footer>
     <script src="script.js"></script>
+    <a href="html/header.html">next page</a>
   </body>
 </html>
