--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,5 @@
-<p>The start of something alright</p>
-
-<a href="/">Home</a>
+<!DOCTYPE html>
+<body>
+  <p>The start of something alright</p>
+  <a href="/">Home</a>
+</body>
