--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My GitHub Website</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to My GitHub Website</h1>
-      <p>This site is hosted for free using GitHub Pages!</p>
-    </header>
-    <main>
-      <section id="about">
-        <h2>About</h2>
-        <p>
-          This is a simple, clean example of a static website you can host on
-          GitHub.
-        </p>
-      </section>
-      <section id="features">
-        <h2>Features</h2>
-        <ul>
-          <li>Free Hosting</li>
-          <li>Fast and Reliable</li>
-          <li>No Server Needed</li>
-        </ul>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>Email us at: example@example.com</p>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2025 My GitHub Website</p>
-    </footer>
-    <script src="script.js"></script>
-    <a href="html/header.html">next page</a>
-  </body>
+  <p style="background-image: url('https://i.imgur.com/7ebAwKr.png')">
+    <head>
+      <center>
+        <style>
+          div.container {
+            text-align: center;
+          }
+
+          ul.myUL {
+            display: inline-block;
+            text-align: left;
+          }
+        </style>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Restore Balance Resources</title>
+      </center>
+    </head>
+    <body>
+      <center>
+        <header>
+          <h1>Restore Balance Resources</h1>
+          <p>A site to help learn more about mental illnesses</p>
+        </header>
+        <main>
+          <section id="about">
+            <h2>About</h2>
+            <p>
+              This site is dedicated to providing resources and information
+              about mental health and wellness.
+            </p>
+          </section>
+        </main>
+        <a href="html/header.html">next page</a>
+      </center>
+    </body>
+  </p>
 </html>
