--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <p style="background-image: url('https://i.imgur.com/7ebAwKr.png')">
-    <head>
+ <style>
+body {
+  background-image: url('https://i.imgur.com/9pjjWw8.png');
+}
+</style>     <head>
       <center>
         <style>
           div.container {
