--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
- <style>
+  <style>
 body {
   background-image: url('https://i.imgur.com/9pjjWw8.png');
 }
-</style>     <head>
+</style>
+<head>
       <center>
         <style>
           div.container {
@@ -20,6 +21,8 @@ body {
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Restore Balance Resources</title>
       </center>
+      
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
       <center>
