--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
         <title>Restore Balance Resources</title>
       </center>
       
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
     <body>
       <center>
