--- a/index.html
+++ b/index.html
@@ -1,46 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <style>
-body {
-  background-image: url('https://i.imgur.com/9pjjWw8.png');
-}
-</style>
-<head>
-      <center>
-        <style>
-          div.container {
-            text-align: center;
-          }
+  <head>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Restore Balance Resources</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f7f7f7;
+        color: #333;
+      }
 
-          ul.myUL {
-            display: inline-block;
-            text-align: left;
-          }
-        </style>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Restore Balance Resources</title>
-      </center>
-      
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    </head>
-    <body>
-      <center>
-        <header>
-          <h1>Restore Balance Resources</h1>
-          <p>A site to help learn more about mental illnesses</p>
-        </header>
-        <main>
-          <section id="about">
-            <h2>About</h2>
-            <p>
-              This site is dedicated to providing resources and information
-              about mental health and wellness.
-            </p>
-          </section>
-        </main>
-        <a href="html/header.html">next page</a>
-      </center>
-    </body>
-  </p>
+      .container {
+        max-width: 700px;
+        padding: 20px;
+        background-color: white;
+        border-radius: 8px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+        text-align: center;
+      }
+
+      h1 {
+        margin-bottom: 10px;
+      }
+
+      h2 {
+        margin-top: 30px;
+      }
+
+      a {
+        color: #0066cc;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Restore Balance Resources</h1>
+
+      <p>
+        A simple site to help you learn more about mental illnesses and find
+        reliable resources.
+      </p>
+
+      <h2>What is Mental Health?</h2>
+      <p>
+        Mental health includes our emotional, psychological, and social
+        well-being. It affects how we think, feel, and act. It also helps
+        determine how we handle stress, relate to others, and make healthy
+        choices. Mental health is important at every stage of life, from
+        childhood through adulthood.
+      </p>
+
+      <p>
+        <a href="html/header.html">Click here to find resources.</a>
+      </p>
+    </div>
+  </body>
 </html>
