--- a/html/header.html
+++ b/html/header.html
@@ -13,9 +13,6 @@
         max-width: 800px;
         margin: auto;
       }
-      h1 {
-        color: #2b6cb0;
-      }
       h2 {
         color: #4a5568;
         margin-top: 2em;
@@ -215,6 +212,8 @@
         All external resources are provided by their respective organizations.
         Always consult a healthcare provider for professional help.
       </p>
+
+      <a href="/">Home</a>
     </footer>
   </body>
 </html>
